--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,20 +13,31 @@
     border-radius: 10px;
     overflow: hidden;
     background: rgba(10, 230, 39, 0.933)
+    
 }
 
 .walls {
     width: 30px;
     height: 100%;
-    left: 860px;
+    left: 900px;
     background: url("../img/hedge.jpg") repeat;
     display: cover;
     position: relative;
-    animation: walls 2.5s infinite;
+    animation: walls 2.5s infinite linear;
 
 }
+
+#character {
+    width: 40px;
+    height: 60px;
+    top: 300px;
+    left: 25px;
+    background: url("../img/sprite3.png") no-repeat center;
+    position: relative;
+}
+
 @keyframes walls {
-    0%{left:860px}
+    0%{left:900px}
     100%{left:-100px}
 }
 
