--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     border: 0;
@@ -8,32 +7,38 @@
     border: 5px #000 solid;
     height: 700px;
     width: 900px;
-    margin:0 auto;
+    margin: 0 auto;
     margin-top: 40px;
     border-radius: 10px;
     overflow: hidden;
-    background: rgba(10, 230, 39, 0.933)
+    background: rgb(102, 98, 98) repeat;
+    display: cover;
 }
 
 .walls {
-    width: 30px;
+    width: 60px;
     height: 100%;
     left: 860px;
     background: url("../img/hedge.jpg") repeat;
     display: cover;
     position: relative;
     animation: walls 2.5s infinite;
-
 }
+
 @keyframes walls {
-    0%{left:860px}
-    100%{left:-100px}
+    0% {
+        left: 860px
+    }
+
+    100% {
+        left: -200px
+    }
 }
 
-#gap {
-    background: rgba(10, 230, 39, 0.933);
-    margin-top: 400px;
-    width: 30px;
-    height: 50px;
+.gap {
+    background: rgb(102, 98, 98) repeat;
+    /* margin-top: 400px; */
+    width: 60px;
+    /* height: 100px; */
     position: absolute;
 }
