created simple animations for game title and menu items

--- a/landing.css
+++ b/landing.css
@@ -142,3 +142,26 @@ li {
 .modal-footer {
     height: 20%;
 }
+
+/* animations for items */
+@keyframes slide {
+    from {
+        transform: translateX(-400px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;    
+    }
+}
