--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,24 @@ body {
     overflow: hidden;
     background: rgb(102, 98, 98) repeat;
     display: cover;
+}
+
+/* ---------- Score at the top of the game ----------*/
+#game-info {
+    position: absolute;
+    background-color: rgb(39, 44, 49);
+    height: 45px;
+    width: 892px;
+    color: #fff;
+    font-weight: 600;
+    margin-left: 0px;
+
 
 }
 
 .walls {
     width: 60px;
-    height: 100%;
+    height: 700px;
     left: 900px;
     background: url("../img/hedge.jpg") repeat;
     display: cover;
@@ -30,8 +42,7 @@ body {
     animation: walls 2.5s infinite linear;
     vertical-align: top;
     z-index: 1;
-
-
+    margin-top: 0;
 }
 
 @keyframes walls {
@@ -44,6 +55,7 @@ body {
     }
 }
 
+/* --------- Gap in the ----------*/
 .gap {
     background: rgb(102, 98, 98) repeat;
     margin-top: 400px;
@@ -54,10 +66,9 @@ body {
 
 }
 
+
 #sprite {
-
     z-index: 2;
-
 }
 
 #sprite>img {
@@ -66,5 +77,4 @@ body {
     top: 350px;
     left: 0;
     display: hidden;
-
 }
