added simple animations called slideup and slideright. targeted by the two character ids on lines 32 and 50

--- a/landing.css
+++ b/landing.css
@@ -204,3 +204,25 @@ li {
         opacity: 1;    
     }
 }
+
+@keyframes slideup {
+    0%, 100% {
+        transform:translateY(600px)
+    }
+
+    10%, 90% {
+        transform: translateY(350px);
+    }
+
+}
+
+@keyframes slideright {
+    from {
+        transform:translateX(1000px)
+    }
+
+    to {
+        transform: translateX(0px);
+    }
+}
+
