--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -68,6 +68,7 @@ html, body {
     background: url(/assets/img/large_random_sprite.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 
     transform: translateX(800px);
 
@@ -247,6 +248,21 @@ li {
 /* add a couple of media queries */
 
 @media screen and (max-width: 1280px) {
+
+    @keyframes slideup {
+        0%, 100% {
+            transform:translate(-100px, 800px)
+        }
+    
+        10%, 90% {
+            transform: translate(-100px, 520px);
+        }
+    
+    }
+    
+}
+
+@media screen and (max-width: 992px) {
 
     @keyframes slideup {
         0%, 100% {
