change position of character-right on 1280 screens

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -248,7 +248,9 @@ li {
 /* add a couple of media queries */
 
 @media screen and (max-width: 1280px) {
-
+    #character-right {
+        transform: translateX(850px);
+    }
     @keyframes slideup {
         0%, 100% {
             transform:translate(-100px, 800px)
