adding character-right translatex for screens at 992px width

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -266,21 +266,24 @@ li {
 }
 
 @media screen and (max-width: 992px) {
-
+    #character-right {
+        transform: translateX(900px);
+    }
+    
     @keyframes slideup {
         0%, 100% {
             transform:translate(-100px, 800px);
         }
     
         10%, 90% {
-            transform: translate(-100px, 520px);
+            transform: translate(-100px, 500px);
         }
     
     }
 
     @keyframes slideright {
         from {
-            transform:translateX(800px);
+            transform:translateX(900px);
         }
     
         to {
