--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
     width: 60px;
     height: 700px;
     left: 900px;
-    background: url("../img/hedge.jpg") repeat;
+    background: #000 repeat;
     display: cover;
     position: relative;
     animation: walls 2.5s infinite linear;
@@ -76,5 +76,5 @@ body {
     height: 45px;
     top: 350px;
     left: 0;
-    display: hidden;
+
 }
